--- a/1_23.07/Task1/app/src/main/res/layout/activity_main.xml
+++ b/1_23.07/Task1/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,15 @@
 
         <Button
             android:id="@+id/clickBtn"
-            android:layout_width="137dp"
-            android:layout_height="96dp"
+            android:layout_width="124dp"
+            android:layout_height="67dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="170dp"
             android:gravity="center"
 
             android:text="Click Here!"
-            android:textColor="#FF69B4" />
+            android:textColor="@color/btnColor" />
 
         <EditText
             android:id="@+id/text1"
@@ -29,20 +29,20 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="90dp"
-            android:outlineAmbientShadowColor="#FF69B4">
+            android:outlineAmbientShadowColor="@color/textColor">
 
         </EditText>
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="190dp"
-            android:layout_height="37dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="63dp"
             android:layout_marginTop="68dp"
             android:text="Input  an  URL"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+            android:textSize="20dp"
+            android:layout_centerHorizontal="true"
+            />
 
 
 </RelativeLayout>
