--- a/1_23.07/Task1/app/src/main/res/values/colors.xml
+++ b/1_23.07/Task1/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="btnColor">#FF69B4</color>
+    <color name="textColor">#FF69B4</color>
 </resources>
