--- a/1_23.07/Task1/app/src/main/res/layout/activity_main.xml
+++ b/1_23.07/Task1/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:weightSum="1"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:background="@drawable/artbluepattern"
@@ -12,11 +11,11 @@
 
         <Button
             android:id="@+id/clickBtn"
-            android:layout_width="124dp"
-            android:layout_height="67dp"
+            android:layout_width="@dimen/buttonWidth"
+            android:layout_height="@dimen/buttonHeight"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="170dp"
+            android:layout_marginTop="@dimen/buttonTop"
             android:gravity="center"
 
             android:text="Click Here!"
@@ -24,11 +23,11 @@
 
         <EditText
             android:id="@+id/text1"
-            android:layout_width="333dp"
-            android:layout_height="70dp"
+            android:layout_width="@dimen/widthText"
+            android:layout_height="@dimen/heightText"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="@dimen/topText"
             android:outlineAmbientShadowColor="@color/textColor">
 
         </EditText>
@@ -37,10 +36,10 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="63dp"
-            android:layout_marginTop="68dp"
-            android:text="Input  an  URL"
-            android:textSize="20dp"
+            android:layout_marginEnd="@dimen/end"
+            android:layout_marginTop="@dimen/top"
+            android:text=" Search "
+            android:textSize="@dimen/size"
             android:layout_centerHorizontal="true"
             />
 
