--- a/2_24.07/MyMovie/app/src/main/res/layout/activity_movie.xml
+++ b/2_24.07/MyMovie/app/src/main/res/layout/activity_movie.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:layout_height="match_parent"
+    android:layout_height="300dp"
     tools:context=".Movie">
 
     <LinearLayout
@@ -21,25 +22,28 @@
             android:id="@+id/titleId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
+            android:layout_marginHorizontal="15dp"
             android:paddingHorizontal="15dp"
             android:text="1+1" />
 
         <ImageView
             android:id="@+id/imageId"
-            android:layout_width="199dp"
-            android:layout_height="100dp"
+            android:layout_width="232dp"
+            android:layout_height="92dp"
             android:src="@drawable/suw5z" />
 
         <RatingBar
             android:id="@+id/ratingBar"
-            android:layout_width="151dp"
-            android:layout_height="14dp" />
+            style="@style/Widget.AppCompat.RatingBar"
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/desId"
             android:layout_width="135dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:maxLines="2"
             android:text="  Watch Online"
             android:textSize="20dp" />
