--- a/5_31.07/SearchUserExample/app/src/main/res/layout/user_model.xml
+++ b/5_31.07/SearchUserExample/app/src/main/res/layout/user_model.xml
@@ -2,6 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_alignParentRight="true"
     >
 <LinearLayout
     android:layout_width="wrap_content"
@@ -12,15 +13,10 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imageID"
-            android:layout_width="70dp"
-            android:layout_height="70dp" />
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
 
             <TextView
@@ -36,6 +32,12 @@
 
         </LinearLayout>
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imageID"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="left" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -45,16 +47,18 @@
                 android:id="@+id/phoneBtnId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="right"
                 android:layout_marginLeft="100dp"
 
-                android:src="@drawable/ic_phone"/>
+                android:src="@drawable/ic_phone" />
 
             <ImageButton
                 android:id="@+id/emailBtnId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="right"
                 android:layout_marginLeft="100dp"
-                android:src="@drawable/ic_email"/>
+                android:src="@drawable/ic_email" />
         </LinearLayout>
 
     </LinearLayout>
