--- a/5_31.07/SearchUserExample/app/src/main/res/layout/user_model.xml
+++ b/5_31.07/SearchUserExample/app/src/main/res/layout/user_model.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_alignParentRight="true"
     >
 <LinearLayout
     android:layout_width="wrap_content"
@@ -60,6 +60,19 @@
                 android:layout_marginLeft="100dp"
                 android:src="@drawable/ic_email" />
         </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            >
+        <ImageButton
+            android:id="@+id/clear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_clear"
+            android:layout_alignEnd="@id/imageID"
+            tools:ignore="NotSibling" />
+        </RelativeLayout>
 
     </LinearLayout>
 
