--- a/7_05.08/ReminderApp/app/src/main/res/layout/activity_login.xml
+++ b/7_05.08/ReminderApp/app/src/main/res/layout/activity_login.xml
@@ -8,41 +8,41 @@
 
     <ImageView
         android:id="@+id/login_image"
-        android:layout_width="193dp"
-        android:layout_height="159dp"
+        android:layout_width="@dimen/login_image_width"
+        android:layout_height="@dimen/login_image_height"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="67dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginEnd="@dimen/login_image_marginEnd"
+        android:layout_marginTop="@dimen/login_image_marginTop"
         android:background="@drawable/login_page" />
 
     <EditText
         android:id="@+id/text_login"
-        android:layout_width="228dp"
+        android:layout_width="@dimen/login_text_width"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/login_image"
         android:hint="Login"
-        android:layout_marginTop="214dp" />
+        android:layout_marginTop="@dimen/login_text_marginTop" />
 
     <EditText
         android:id="@+id/text_password"
-        android:layout_width="228dp"
+        android:layout_width="@dimen/password_width"
         android:layout_height="wrap_content"
         android:hint="Password"
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/login_image"
-        android:layout_marginBottom="180dp" />
+        android:layout_marginBottom="@dimen/password_marginBottom" />
 
     <Button
         android:id="@+id/submit_btn"
-        android:layout_width="134dp"
-        android:layout_height="58dp"
+        android:layout_width="@dimen/submit_btn_width"
+        android:layout_height="@dimen/submit_btn_height"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:text="Submit"
-        android:background="#76cddb"
-        android:layout_marginBottom="102dp"
-        android:layout_marginEnd="109dp" />
+        android:background="@color/colorBackground"
+        android:layout_marginBottom="@dimen/submit_marginBottom"
+        android:layout_marginEnd="@dimen/submit_marginEnd" />
 
 </RelativeLayout>
