--- a/7_05.08/ReminderApp/app/src/main/res/layout/item_row.xml
+++ b/7_05.08/ReminderApp/app/src/main/res/layout/item_row.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/first_name"
-        android:textSize="24sp"
+        android:textSize="@dimen/first_name_text_size"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
