--- a/7_05.08/ReminderApp/app/src/main/res/layout/preview_content.xml
+++ b/7_05.08/ReminderApp/app/src/main/res/layout/preview_content.xml
@@ -7,17 +7,17 @@
     android:orientation="vertical">
 
     <RelativeLayout
-        android:layout_width="276dp"
-        android:layout_height="252dp"
+        android:layout_width="@dimen/relativLayout_width"
+        android:layout_height="@dimen/relativeLayout_height"
         android:layout_gravity="center"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="@dimen/relativeLayout_marginTop"
 
         android:gravity="center">
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="160dp"
-            android:layout_height="160dp"
+            android:layout_width="@dimen/image_width"
+            android:layout_height="@dimen/image_height"
             android:layout_centerInParent="true"
             android:layout_gravity="center" />
 
@@ -29,17 +29,17 @@
             android:layout_centerInParent="true"
             android:textAlignment="center"
             android:textColor="@color/text_color"
-            android:textSize="25sp" />
+            android:textSize="@dimen/tv_logo_text_textSize" />
     </RelativeLayout>
 
     <TextView
         android:id="@+id/tv_text"
-        android:layout_width="258dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/tv_text_width"
+        android:layout_height="@dimen/tv_text_height"
         android:layout_marginTop="100dp"
         android:gravity="center_horizontal"
         android:textAlignment="center"
         android:textColor="@color/text_color"
-        android:textSize="18sp" />
+        android:textSize="@dimen/tv_text_textSize" />
 
 </LinearLayout>
